--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,18 +13,41 @@
             <span><img width="56" src="/assets/images/logo.svg" alt="netflix"></span>
             <!-- button bar -->
             <div class="flex">
-                <button>English</button>
-                <button>Sign In</button>
+                <button class="btn">English</button>
+                <button class="btn btn-red-sm">Sign In</button>
             </div>
             <!-- button bar -->
         </nav>
         <!-- navigation  bar here ends -->
         <div class="box">
-            Unlimited movies, TV shows and more
-            Starts at ₹149. Cancel anytime.
-            
-            Ready to watch? Enter your email to create or restart your membership.                        
+                                   
         </div>
+
+        <div class="hero">
+            <span>Unlimited movies, TV </span>
+            <span> shows and more</span>
+            <p>Starts at ₹149. Cancel anytime.</p>
+            <span>Ready to watch? Enter your email to create or restart your membership. </span>
+            <div class="hero-buttons">
+                <input type="text" placeholder="Email address">
+                <button class="btn btn-red">Get Started <span class="gst">&gt;</span></button>
+            </div>
+        </div>
+
+        <!-- line  -->
+        <div class="separation">
+        </div>
+        <!-- line  -->
     </div>
+
+    <section class="first">
+        <div>
+            Enjoy on your Tv 
+            Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple Tv, Blu-ray players and more.
+        </div>
+        <div class="secImg">
+            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="secIMg">
+        </div>
+    </section>
 </body>
 </html>
