--- a/index.html
+++ b/index.html
@@ -202,6 +202,38 @@
     </section>
     <div class="separation"></div>
 
+    <footer>
+        <div class="questns">Questions? Call 000-800-919-1694</div>
+        <div class="footer">
+           
+            <div class="footer-items">
+                <a href="faq">FAQ</a>
+                <a href="faq">Investor Relations</a>
+                <a href="faq">Privacy</a>
+                <a href="faq">Speed Test</a>
+            </div>
+            
+            <div class="footer-items">
+                <a href="faq">Help Centre</a>
+                <a href="faq">Jobs</a>
+                <a href="faq">Cookie Preferences</a>
+                <a href="faq">Legal Notices</a>
+            </div>
+            <div class="footer-items">
+                <a href="faq">Account</a>
+                <a href="faq">Ways to Watch</a>
+                <a href="faq">Corporate Information</a>
+                <a href="faq">Only on Netflix</a>
+            </div>
+
+            <div class="footer-items">
+                <a href="faq">Media Centre</a>
+                <a href="faq">Terms of Use</a>
+                <a href="faq">Contact Us</a>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
